--- a/frontend/src/i18n/en/translations.json
+++ b/frontend/src/i18n/en/translations.json
@@ -20,13 +20,13 @@
   "save": "Save",
   "available": "Available",
   "unavailable": "Occupied",
-  "forgotten_password": "Forgotten Password",
+  "forgotten_password": "Forgotten password",
   "login": "Login",
   "back_to_login": "Back to login",
-  "new_password": "New Password",
+  "new_password": "New password",
   "send": "Send",
   "reset": "Reset",
-  "reset_password": "Reset Password",
-  "email_reset_success": "Password Reset Successful",
-  "reset_success": "Password Reset Successful"
+  "reset_password": "Reset password",
+  "email_reset_success": "An email for reset was sent",
+  "reset_success": "Password reset successful"
 }
