--- a/frontend/src/i18n/en/translations.json
+++ b/frontend/src/i18n/en/translations.json
@@ -19,7 +19,8 @@
   "profile_page": "Profile page",
   "save": "Save",
   "available": "Available",
-  "unavailable": "Occupied",
+  "unavailable": "Unavailable",
+  "your_reservation": "Your reservation",
   "forgotten_password": "Forgotten password",
   "login": "Login",
   "back_to_login": "Back to login",
