--- a/frontend/src/i18n/en/translations.json
+++ b/frontend/src/i18n/en/translations.json
@@ -20,7 +20,7 @@
   "save": "Save",
   "available": "Available",
   "unavailable": "Unavailable",
-  "your_reservation": "Your reservation",
+  "your_reservation": "Your desk",
   "forgotten_password": "Forgotten password",
   "login": "Login",
   "back_to_login": "Back to login",
