feat: not-found pages

--- a/frontend/src/i18n/en/translations.json
+++ b/frontend/src/i18n/en/translations.json
@@ -12,6 +12,7 @@
   "sign_up": "Sign up",
   "sign_in": "Sign in",
   "page_not_found": "Page not found",
+  "office_not_found": "Office not found",
   "please_check_url": "Please check the URL in the address bar and try again.",
   "go_back_home": "Go back home",
   "logout": "Logout",
