--- a/frontend/src/i18n/en/translations.json
+++ b/frontend/src/i18n/en/translations.json
@@ -1,5 +1,5 @@
 {
-  "seat_reservation_system": "Seat reservation system",
+  "workspace_reservation_system": "Workspace reservation system",
   "sign_in_your_account": "Sign in to your account",
   "email": "Email",
   "firstname": "Firstname",
@@ -33,5 +33,37 @@
   "reset_success": "Password reset successful",
   "active_reservations": "Active reservations",
   "num_of_days_displayed": "Days to display",
-  "num_of_expired_reservations": "Expired reservations"
+  "num_of_expired_reservations": "Expired reservations",
+  "download_office_json": "Download an example of an office.json file",
+  "no_floor_plan_available": "No floor plane available.",
+  "your_reservations": "Your reservations",
+  "empty_table": "No data to display",
+  "pick_workspace": "Pick your workspace",
+  "confirm": "Confirm",
+  "confirm_reservation": "Confirm reservation",
+  "full_day": "Full day",
+  "multiple_reservations": "Multiple reservations",
+  "show_weekends": "Show weekends",
+  "home": "Home",
+  "loading": "Loading...",
+  "selectFile": "Select file",
+  "no_file_uploaded": "No file uploaded",
+  "selected_day": "Selected day: ",
+  "selected_time": "Selected time: ",
+  "time_format": "dd.MM.yyyy",
+  "h_format": "h",
+  "comment": "Comment",
+  "close": "Close",
+  "companyLogo": "Company logo",
+  "open_user_menu": "Open user menu",
+  "close_side_menu": "Close side menu",
+  "open_sidebar": "Open sidebar",
+  "active": "Active",
+  "expired": "Expired",
+  "cancel": "Cancel",
+  "renew": "Renew",
+  "delete_reservation": "Delete reservation",
+  "reservation_delete_warning": "Are you sure you want to delete this reservation?",
+  "delete": "Delete",
+  "workspace": "workspace"
 }
