--- a/frontend/src/i18n/en/translations.json
+++ b/frontend/src/i18n/en/translations.json
@@ -65,5 +65,13 @@
   "delete_reservation": "Delete reservation",
   "reservation_delete_warning": "Are you sure you want to delete this reservation?",
   "delete": "Delete",
-  "workspace": "workspace"
+  "workspace": "workspace",
+  "disable_office": "Disable office",
+  "office_delete_warning": "Are you sure you want to disable this office?",
+  "disable": "Disable",
+  "dashboard": "Dashboard",
+  "no_offices": "No offices to show",
+  "edit": "Edit",
+  "add_office": "Add office",
+  "enable": "Enable"
 }
