--- a/frontend/src/i18n/en/translations.json
+++ b/frontend/src/i18n/en/translations.json
@@ -42,7 +42,7 @@
   "confirm": "Confirm",
   "confirm_reservation": "Confirm reservation",
   "full_day": "Full day",
-  "multiple_reservations": "Multiple reservations",
+  "multiple_reservations": "Multiple workspaces",
   "show_weekends": "Show weekends",
   "home": "Home",
   "loading": "Loading...",
