--- a/frontend/src/i18n/en/translations.json
+++ b/frontend/src/i18n/en/translations.json
@@ -88,5 +88,5 @@
   "disabled": "Disabled",
   "no_workspace_selected": "No workspace selected.",
   "redirect_on_login": "Automatic redirect",
-  "noFileSelected": "No file selected",
+  "noFileSelected": "No file selected"
 }
